Fixes minor layout issues with the link effects.

--- a/src/app/components/link/link.styles.scss
+++ b/src/app/components/link/link.styles.scss
@@ -17,6 +17,8 @@
     position: relative;
     pointer-events: none;
     box-shadow: inset 0 -2px #F0F;
+    display: inline-block;
+    line-height: 19px;
 
     &--hidden {
       box-shadow: none;
@@ -65,7 +67,6 @@
     top: 0;
     right: 0;
     left: 0;
-    display: block;
     height: 9px;
     overflow: hidden;
     pointer-events: none;
