--- a/src/app/components/nav/nav.styles.scss
+++ b/src/app/components/nav/nav.styles.scss
@@ -38,6 +38,10 @@
     }
   }
 
+  &__underline.link__underline {
+    line-height: 16px;
+  }
+
   &__linkEffect.link__linkEffect {
     top: 39px;
     left: 48px;
